--- a/trunk/build.xml
+++ b/trunk/build.xml
@@ -11,25 +11,31 @@
     <property name="src.build.macros.dir" value="${src.build.dir}/macros" />
     <property name="src.build.ivy.settings.file" value="${src.build.dir}/ivy-settings.xml"/>
 
-    <property name="src.java.dir" value="${src.dir}/main"/>
-    <property name="src.java.main.dir" value="${src.java.dir}/java"/>
-    <property name="src.java.test.dir" value="${src.dir}/test"/>
-    <property name="src.test.java.unit.dir" value="${src.java.test.dir}/java/unit"/>
+    <property name="src.main.dir" value="${src.dir}/main"/>
+    <property name="src.main.java.dir" value="${src.main.dir}/java"/>
+
+    <property name="src.test.dir" value="${src.dir}/test"/>
+    <property name="src.test.java.dir" value="${src.test.dir}/java"/>
+    <property name="src.test.java.unit.dir" value="${src.test.java.dir}/unit"/>
+    <property name="src.test.java.functional.dir" value="${src.test.java.dir}/functional"/>
 
     <property name="src.resource.dir" value="${src.dir}/main/resource"/>
 
     <property name="lib.build.dir" value="${lib.dir}/build"/>
     <property name="lib.main.dir" value="${lib.dir}/main"/>    
     <property name="lib.test.unit.dir" value="${lib.dir}/test.unit"/>
+    <property name="lib.test.functional.dir" value="${lib.dir}/test.functional"/>
 
     <property name="target.classes.dir" value="${target.dir}/classes"/>
     <property name="target.classes.main.dir" value="${target.classes.dir}/main"/>
     <property name="target.classes.test.dir" value="${target.classes.dir}/test"/>
     <property name="target.classes.test.unit.dir" value="${target.classes.test.dir}/unit"/>
+    <property name="target.classes.test.functional.dir" value="${target.classes.test.dir}/functional"/>
 
     <property name="target.report.dir" value="${target.dir}/report"/>
     <property name="target.report.test.dir" value="${target.report.dir}/test"/>
     <property name="target.report.test.unit.dir" value="${target.report.test.dir}/unit"/>
+    <property name="target.report.test.functional.dir" value="${target.report.test.dir}/functional"/>
 
     <import file="${src.build.macros.dir}/ivy.xml"/>
     <import file="${src.build.macros.dir}/report.xml"/>
@@ -54,16 +60,25 @@
         <path refid="classpath.test.unit" />
     </path>
 
+    <path id="classpath.test.functional">
+        <fileset dir="${lib.test.unit.dir}/jar/" includes="**/*.jar" />
+        <path location="${target.classes.main.dir}" />
+        <path refid="classpath.main" />
+        <path refid="classpath.test.unit" />
+    </path>
+
+    <path id="classpath.test.functional.run">
+        <path location="${target.classes.test.functional.dir}" />
+        <path refid="classpath.test.functional" />
+    </path>
+
+
+
     <target name="report.config" description="--> lists some important configuration information">
         <echo message="ant.home        : ${ant.home}"/>
         <echo message="os.name         : ${os.name}"/>
         <echo message="basedir         : ${basedir}"/>
         <echo message="skip.update.lib : ${skip.update.lib}" />
-    </target>
-
-    <target name="report.unit.test.failures" description="--> opens the unit test failures in a browser">
-        <junit-open-reports configuration="unit.test"
-                            report.dir="${target.report.test.unit.dir}" />
     </target>
 
     <target name="clean" description="--> remove all files created with this build script">
@@ -99,10 +114,10 @@
 
     <target name="compile.main">
         <compile-java configuration="main"
-                      src.dir="${src.java.main.dir}"
+                      src.dir="${src.main.java.dir}"
                       classpath.refid="classpath.main"
                       target.classes.dir="${target.classes.main.dir}"
-                      java.version="1.4"
+                      java.version="1.5"
                       hide.warnings="false"/>
     </target>
 
@@ -112,7 +127,7 @@
                       src.dir="${src.test.java.unit.dir}"
                       classpath.refid="classpath.test.unit"
                       target.classes.dir="${target.classes.test.unit.dir}"
-                      java.version="1.4"/>
+                      java.version="1.5"/>
     </target>
 
     <target name="run.unit.tests" depends="compile.main, compile.unit.test" 
@@ -123,6 +138,31 @@
                     src.test.dir="${src.test.java.unit.dir}" />
     </target>
 
+    <target name="report.unit.test.failures" description="--> opens the unit test failures in a browser">
+            <junit-open-reports configuration="unit.test"
+                                report.dir="${target.report.test.unit.dir}" />
+    </target>
+
+    <target name="compile.functional.tests">
+            <compile-java configuration="functional.test"
+                          src.dir="${src.test.java.functional.dir}"
+                          classpath.refid="classpath.test.functional"
+                          target.classes.dir="${target.classes.test.functional.dir}"
+                          java.version="1.5"/>
+        </target>
+
+        <target name="run.functional.tests" depends="compile.main, compile.functional.tests"
+                description="--> compiles and runs the functional tests">
+             <run-junit configuration="functional.test"
+                        classpath.refid="classpath.test.functional.run"
+                        report.dir="${target.report.test.functional.dir}"
+                        src.test.dir="${src.test.java.functional.dir}" />
+        </target>
+
+        <target name="report.functional.test.failures" description="--> opens the functional test failures in a browser">
+                <junit-open-reports configuration="functional.test"
+                                    report.dir="${target.report.test.unit.dir}" />
+        </target>
 
 
     <target name="build-osx-app" depends="report.config, clean"
